fixed screenshot bleeding out of card

--- a/styles/style.css
+++ b/styles/style.css
@@ -66,7 +66,7 @@ nav {
 
 #nav-right li a:hover {
   background-color: #232323;
-  color: var(--blue);
+  color: #3d7694; /* darkblue but lighter, matches the title blue better but no var for it */
   text-decoration: underline;
   text-decoration-color: var(--orange);
   transition: all 0.3s;
@@ -127,7 +127,7 @@ header {
 
 .project-img-wrapper {
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
